@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.019" hostname="unknown" timestamp="2015-03-31T22:42:32">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.028" hostname="unknown" timestamp="2015-04-13T17:48:53">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error><![CDATA[Error in tear_down fixture:
@@ -8,8 +8,8 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_errorfail_
 In C:\Users\Alexander\repositories\mlunit\src\@function_test_case\tear_down.m at line 21
 In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_test.m at line 73
 In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
-In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 73
-In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36]]></error>
+In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 77
+In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 42]]></error>
     <failure><![CDATA[(no message available)
 In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_errorfail_output.m at line 9]]></failure>
   </testcase>
